[SYSTEMDS-3180] Upgrade to jdk 11, spark 3, hadoop 3