@@ -841,7 +841,7 @@ public class Statistics
 			InstStats val = _instStats.get(opcode);
 			long count = val.count.longValue();
 			double time = val.time.longValue() / 1000000000d; // in sec
-			heavyHitters.put(opcode, new ImmutablePair<>(new Long(count), new Double(time)));
+			heavyHitters.put(opcode, new ImmutablePair<>(Long.valueOf(count), Double.valueOf(time)));
 		}
 		return heavyHitters;
 	}
